--- a/HealthCatalystPeopleSearch/HealthCatalystPeopleSearch.csproj
+++ b/HealthCatalystPeopleSearch/HealthCatalystPeopleSearch.csproj
@@ -210,6 +210,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\hcStyles.css" />
+    <Content Include="Content\Images\NoImageAvailable.jpg" />
     <Content Include="Content\Images\spinner.gif" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
